--- a/src/app/modules/admin/income/components/income-categories-dialog/income-categories-dialog.component.html
+++ b/src/app/modules/admin/income/components/income-categories-dialog/income-categories-dialog.component.html
@@ -20,8 +20,7 @@
         </div>
 
         <div class="flex flex-col items-start gap-2">
-            <label for="category-icon" class="text-[1rem] font-medium">Category Icon <span
-                    class="text-red-600">*</span></label>
+            <label for="category-icon" class="text-[1rem] font-medium">Category Icon</label>
 
             <div class="w-full h-[12rem] p-[2rem] border-[2px] border-opacity-75 rounded border-myAccent text-center border-dashed relative"
                 appDnd (fileDropped)="onFileDropped($event)">
