--- a/src/app/modules/admin/expense/components/expense-categories-dialog/expense-categories-dialog.component.html
+++ b/src/app/modules/admin/expense/components/expense-categories-dialog/expense-categories-dialog.component.html
@@ -34,8 +34,7 @@
         </div> -->
 
         <div class="flex flex-col items-start gap-2">
-            <label for="category-icon" class="text-[1rem] font-medium">Category Icon <span
-                    class="text-red-600">*</span></label>
+            <label for="category-icon" class="text-[1rem] font-medium">Category Icon</label>
 
             <div class="w-full h-[12rem] p-[2rem] border-[2px] border-opacity-75 rounded border-myAccent text-center border-dashed relative"
                 appDnd (fileDropped)="onFileDropped($event)">
@@ -45,10 +44,17 @@
                     <img src="assets\icons\upload.svg" alt="" class="w-[50px] fill-myAccent" />
 
                     <label for="fileDropRef" class="font-semibold text-xl">Choose an icon or drag it here</label>
-
+                    <!-- <ng-container *ngIf="data"> -->
                     <div *ngIf="imageUrl" class="w-full bg-backgroundColor absolute top-0 bottom-0 p-4">
                         <img [src]="imageUrl" alt="" class="object-contain w-full h-full" />
                     </div>
+                    <!-- </ng-container> -->
+
+                    <!-- <div *ngIf="data == false" class="w-full bg-backgroundColor absolute top-0 bottom-0 p-4">
+                        <img [src]="imageUrl" alt="" class="object-contain w-full h-full" />
+                    </div> -->
+
+
                 </div>
             </div>
         </div>
