--- a/src/app/modules/admin/income/components/receipt-dialog/receipt-dialog.component.html
+++ b/src/app/modules/admin/income/components/receipt-dialog/receipt-dialog.component.html
@@ -1,23 +1,19 @@
 <h2 mat-dialog-title class="mb-0">Receipt</h2>
 <mat-dialog-content class="mat-typography py-3 overflow-y-scroll">
-    <div *ngIf="imageUrl">
+    <div *ngIf="data.imageUrl != null">
         <img [src]="imageUrl" alt="Receipt" />
     </div>
+    <span *ngIf="imageUrl == null">There is no Receipt</span>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end" class="flex gap-4 items-center">
-    <button
-        mat-dialog-close
-        class="px-6 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2"
-    >
+    <button mat-dialog-close
+        class="px-6 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2">
         Cancel
     </button>
     <button
         class="px-6 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
-        [mat-dialog-close]="false"
-        cdkFocusInitial
-        (click)="prinkReceipt()"
-    >
+        [mat-dialog-close]="false" cdkFocusInitial (click)="prinkReceipt()">
         Print
     </button>
 </mat-dialog-actions>
