--- a/src/app/modules/admin/income/components/income-categories/income-categories.component.html
+++ b/src/app/modules/admin/income/components/income-categories/income-categories.component.html
@@ -99,3 +99,5 @@
         <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
     </div>
 </section>
+
+<p-toast></p-toast>
