--- a/src/app/modules/admin/accounts/components/new-account/new-account.component.html
+++ b/src/app/modules/admin/accounts/components/new-account/new-account.component.html
@@ -117,7 +117,7 @@
         </div>
 
         <button type="submit"
-            class="py-2 px-10 rounded font-semibold text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] self-end transition-all hover:bg-accentHover bg-darkAccent w-fit">
+            class="py-2 px-10 rounded font-semibold text-textColor  self-end transition-all hover:bg-accentHover bg-darkAccent w-fit">
             {{ updateFormData != undefined ? "Update Account" : "Add Account" }}
         </button>
 
