--- a/src/app/modules/admin/accounts/components/transactions/transactions.component.html
+++ b/src/app/modules/admin/accounts/components/transactions/transactions.component.html
@@ -1,15 +1,10 @@
-<section
-    class="m-5 lg:m-10 p-4 lg:py-6 w-full lg:px-8 bg-white rounded-lg flex flex-col gap-4 overflow-x-hidden"
->
+<section class="m-5 lg:m-10 p-4 lg:py-6 w-full lg:px-8 bg-white rounded-lg flex flex-col gap-4 overflow-x-hidden">
     <div class="flex items-center justify-between">
         <div class="flex flex-col gap-2 justify-items-start">
             <!-- Breadcrumb -->
             <div class="lg:flex hidden gap-2 items-center">
-                <mat-icon
-                    class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
-                    svgIcon="heroicons_outline:home"
-                    (click)="navigateToHome()"
-                >
+                <mat-icon class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
+                    svgIcon="heroicons_outline:home" (click)="navigateToHome()">
                 </mat-icon>
                 <p>Accounts</p>
                 <span>/</span>
@@ -20,6 +15,13 @@
             <!-- Title -->
             <h3 class="font-bold text-[1.3rem]">Transactions</h3>
         </div>
+
+        <mat-form-field class="w-fit mt-0 self-end">
+            <mat-select matInfix disableOptionCentering placeholder="Filter By" (valueChange)="filterByData($event)">
+                <mat-option *ngFor="let item of filterBy" [value]="item.id">{{ item.name }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
 
         <!-- <div class="flex items-center gap-4">
             <svg
@@ -105,78 +107,41 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
     </div>
 
     <!-- Content -->
-    <div
-        class="flex w-full flex-col md:flex-row gap-4 justify-center items-center"
-    >
+    <div class="flex w-full flex-col md:flex-row gap-4 justify-center items-center">
         <!-- Search -->
-        <div
-            class="border border-myAccent w-full flex items-center justify-between rounded pr-2"
-        >
-            <input
-                type="search"
-                name="transaction-search"
-                (keyup)="searchTransactions($event)"
-                id="transaction-search"
-                placeholder="Search "
-                class="px-4 py-2 w-full rounded caret-myAccent"
-            />
+        <div class="border border-myAccent w-full flex items-center justify-between rounded pr-2">
+            <input type="search" name="transaction-search" (keyup)="searchTransactions($event)" id="transaction-search"
+                placeholder="Search " class="px-4 py-2 w-full rounded caret-myAccent" />
 
-            <mat-icon
-                class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
-                svgIcon="heroicons_outline:search"
-            ></mat-icon>
+            <mat-icon class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
+                svgIcon="heroicons_outline:search"></mat-icon>
         </div>
 
         <mat-form-field appearance="fill" class="mt-0 w-full">
-            <mat-date-range-input
-                [rangePicker]="picker"
-                placeholder="Select Date"
-            >
-                <input
-                    matStartDate
-                    placeholder="Start date"
-                    [(ngModel)]="getTransactionsModal.startDate"
-                    (dateChange)="dateFilter()"
-                />
-                <input
-                    matEndDate
-                    placeholder="End date"
-                    [(ngModel)]="getTransactionsModal.endDate"
-                    (dateChange)="dateFilter()"
-                />
+            <mat-date-range-input [rangePicker]="picker" placeholder="Select Date">
+                <input matStartDate placeholder="Start date" [(ngModel)]="getTransactionsModal.startDate"
+                    (dateChange)="dateFilter()" />
+                <input matEndDate placeholder="End date" [(ngModel)]="getTransactionsModal.endDate"
+                    (dateChange)="dateFilter()" />
             </mat-date-range-input>
 
-            <mat-icon
-                matDatepickerToggleIcon
-                class="cursor-pointer"
-                (click)="clearDate()"
-                *ngIf="
+            <mat-icon matDatepickerToggleIcon class="cursor-pointer" (click)="clearDate()" *ngIf="
                     getTransactionsModal.startDate != null &&
                     getTransactionsModal.endDate != null
-                "
-                >clear</mat-icon
-            >
+                ">clear</mat-icon>
 
-            <mat-datepicker-toggle
-                class="text-myAccent w-7"
-                matIconSuffix
-                [for]="picker"
-            ></mat-datepicker-toggle>
+            <mat-datepicker-toggle class="text-myAccent w-7" matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
     </div>
 
     <div class="whitespace-nowrap w-full overflow-x-scroll shadow rounded-lg">
-        <table
-            mat-table
-            [dataSource]="dataSource"
-            class="mat-elevation-z8 w-full"
-        >
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
                 <td mat-cell *matCellDef="let element; let i = index">
                     {{
-                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
                     }}
                 </td>
             </ng-container>
@@ -192,17 +157,17 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 <th mat-header-cell *matHeaderCellDef>Payment Mode</th>
                 <td mat-cell *matCellDef="let element">
                     {{
-                        element.paymentMode == 0
-                            ? "Gpay"
-                            : element.paymentMode == 1
-                            ? "PhonePe"
-                            : element.paymentMode == 2
-                            ? "Credit Card / Debit Card"
-                            : element.paymentMode == 3
-                            ? "Cheque"
-                            : element.paymentMode == 4
-                            ? "Cash"
-                            : "-"
+                    element.paymentMode == 0
+                    ? "Gpay"
+                    : element.paymentMode == 1
+                    ? "PhonePe"
+                    : element.paymentMode == 2
+                    ? "Credit Card / Debit Card"
+                    : element.paymentMode == 3
+                    ? "Cheque"
+                    : element.paymentMode == 4
+                    ? "Cash"
+                    : "-"
                     }}
                 </td>
             </ng-container>
@@ -232,11 +197,11 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 <th mat-header-cell *matHeaderCellDef>Inclu / Exclu</th>
                 <td mat-cell *matCellDef="let element">
                     {{
-                        element.taxStatus == 1
-                            ? "Included"
-                            : element.taxStatus == 2
-                            ? "Excluded"
-                            : "-"
+                    element.taxStatus == 1
+                    ? "Included"
+                    : element.taxStatus == 2
+                    ? "Excluded"
+                    : "-"
                     }}
                 </td>
             </ng-container>
@@ -272,10 +237,6 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
-        <mat-paginator
-            #paginatorRef
-            [pageSizeOptions]="[5, 10, 25, 100]"
-            [showFirstLastButtons]="true"
-        ></mat-paginator>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
     </div>
 </section>
