--- a/src/app/modules/admin/expense/components/collect-dialog/collect-dialog.component.html
+++ b/src/app/modules/admin/expense/components/collect-dialog/collect-dialog.component.html
@@ -91,15 +91,16 @@
 
         <mat-dialog-actions align="end" class="flex gap-4 items-center mt-4">
             <button
-                class="px-10 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2"
+                class="px-10 text-accentHover border border-accentHover py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2"
                 mat-dialog-close>
                 Cancel
             </button>
             <button
-                class="px-10 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
+                class="px-10 text-textColor py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
                 cdkFocusInitial type="submit">
                 {{ isEdit ? "Update Expense" : "Add Expense" }}
             </button>
         </mat-dialog-actions>
     </form>
 </section>
+<p-toast></p-toast>
