--- a/src/app/modules/admin/expense/components/expense-categories/expense-categories.component.html
+++ b/src/app/modules/admin/expense/components/expense-categories/expense-categories.component.html
@@ -43,7 +43,7 @@
         </mat-form-field>
 
         <button
-            class="px-10 border text-textColor hover:border-darkAccent border-accentHover shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
+            class="px-10 border text-textColor hover:border-accentHover border-darkAccent  py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
             (click)="addCategory()">
             <p class="font-semibold">Add Expense category</p>
             <!-- <mat-icon
