--- a/src/app/modules/admin/reports/components/accounts-statement/accounts-statement.component.html
+++ b/src/app/modules/admin/reports/components/accounts-statement/accounts-statement.component.html
@@ -1,15 +1,10 @@
-<section
-    class="m-5 sm:m-10 p-4 sm:py-6 w-full sm:px-8 bg-white rounded-lg flex flex-col gap-4 overflow-x-hidden"
->
+<section class="m-5 sm:m-10 p-4 sm:py-6 w-full sm:px-8 bg-white rounded-lg flex flex-col gap-4 overflow-x-hidden">
     <div class="flex items-center justify-between">
         <div class="flex flex-col gap-2 justify-items-start">
             <!-- Breadcrumb -->
             <div class="sm:flex hidden gap-2 items-center">
-                <mat-icon
-                    class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
-                    svgIcon="heroicons_outline:home"
-                    (click)="navigateToHome()"
-                >
+                <mat-icon class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
+                    svgIcon="heroicons_outline:home" (click)="navigateToHome()">
                 </mat-icon>
                 <p>Reports</p>
                 <span>/</span>
@@ -20,7 +15,8 @@
             <h3 class="font-bold text-[1.3rem]">Account Statement</h3>
         </div>
 
-        <div class="flex items-center gap-4">
+        <!-- Export SVG's -->
+        <!-- <div class="flex items-center gap-4">
             <svg
                 matTooltip="Export as PDF"
                 version="1.0"
@@ -100,83 +96,46 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                     />
                 </g>
             </svg>
-        </div>
+        </div> -->
     </div>
 
     <!-- Content -->
-    <div
-        class="flex w-full flex-col md:flex-row gap-4 justify-center items-center"
-    >
+    <div class="flex w-full flex-col md:flex-row gap-4 justify-center items-center">
         <!-- Search -->
-        <div
-            class="border border-myAccent w-full flex items-center justify-between rounded pr-2"
-        >
-            <input
-                type="search"
-                name="account-search"
-                id="account-search"
-                (keyup)="searchAccountName($event)"
-                placeholder="Search "
-                class="px-4 w-full py-2 rounded caret-myAccent"
-            />
+        <div class="border border-myAccent w-full flex items-center justify-between rounded pr-2">
+            <input type="search" name="account-search" id="account-search" (keyup)="searchAccountName($event)"
+                placeholder="Search " class="px-4 w-full py-2 rounded caret-myAccent" />
 
-            <mat-icon
-                class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
-                svgIcon="heroicons_outline:search"
-            ></mat-icon>
+            <mat-icon class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
+                svgIcon="heroicons_outline:search"></mat-icon>
         </div>
 
         <mat-form-field appearance="fill" class="mt-0 w-full">
-            <mat-date-range-input
-                [rangePicker]="picker"
-                placeholder="Select Date"
-            >
-                <input
-                    matStartDate
-                    placeholder="Start date"
-                    [(ngModel)]="getAccountNameModel.startDate"
-                    (dateChange)="dateFilter()"
-                />
-                <input
-                    matEndDate
-                    placeholder="End date"
-                    [(ngModel)]="getAccountNameModel.endDate"
-                    (dateChange)="dateFilter()"
-                />
+            <mat-date-range-input [rangePicker]="picker" placeholder="Select Date">
+                <input matStartDate placeholder="Start date" [(ngModel)]="getAccountNameModel.startDate"
+                    (dateChange)="dateFilter()" />
+                <input matEndDate placeholder="End date" [(ngModel)]="getAccountNameModel.endDate"
+                    (dateChange)="dateFilter()" />
             </mat-date-range-input>
 
-            <mat-icon
-                matDatepickerToggleIcon
-                class="cursor-pointer"
-                (click)="clearDate()"
-                *ngIf="
+            <mat-icon matDatepickerToggleIcon class="cursor-pointer" (click)="clearDate()" *ngIf="
                     getAccountNameModel.startDate != null &&
                     getAccountNameModel.endDate != null
-                "
-                >clear</mat-icon
-            >
+                ">clear</mat-icon>
 
-            <mat-datepicker-toggle
-                class="text-myAccent w-7"
-                matIconSuffix
-                [for]="picker"
-            ></mat-datepicker-toggle>
+            <mat-datepicker-toggle class="text-myAccent w-7" matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
     </div>
 
     <!-- Angular Table -->
     <div class="whitespace-nowrap w-full overflow-x-scroll shadow rounded-lg">
-        <table
-            mat-table
-            [dataSource]="dataSource"
-            class="mat-elevation-z8 w-full"
-        >
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
                 <td mat-cell *matCellDef="let element; let i = index">
                     {{
-                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
                     }}
                 </td>
             </ng-container>
@@ -193,10 +152,8 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                     Transactions
                 </th>
                 <td mat-cell *matCellDef="let element" class="text-right">
-                    <button
-                        (click)="viewTransactions(element.id)"
-                        class="shadow-[inset_4px_4px_13px_rgba(0,0,0,0.25)] px-3 py-1 bg-darkAccent rounded transition hover:bg-accentHover text-textColor"
-                    >
+                    <button (click)="viewTransactions(element.id)"
+                        class="shadow-[inset_4px_4px_13px_rgba(0,0,0,0.25)] px-3 py-1 bg-darkAccent rounded transition hover:bg-accentHover text-textColor">
                         View
                     </button>
                 </td>
@@ -206,11 +163,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator
-            #paginatorRef
-            [pageSizeOptions]="[5, 10, 25, 100]"
-            [showFirstLastButtons]="true"
-        ></mat-paginator>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
     </div>
 </section>
 
