--- a/src/app/modules/admin/reports/components/payment-dialog/payment-dialog.component.html
+++ b/src/app/modules/admin/reports/components/payment-dialog/payment-dialog.component.html
@@ -2,16 +2,12 @@
 <mat-dialog-content class="py-3 overflow-y-scroll">
     <!-- Angular Table -->
     <div class="whitespace-nowrap w-full overflow-x-scroll shadow rounded-lg">
-        <table
-            mat-table
-            [dataSource]="dataSource"
-            class="mat-elevation-z8 w-full"
-        >
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
                 <td mat-cell *matCellDef="let element; let i = index">
                     {{
-                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
                     }}
                 </td>
             </ng-container>
@@ -27,17 +23,17 @@
                 <th mat-header-cell *matHeaderCellDef>Payment Mode</th>
                 <td mat-cell *matCellDef="let element">
                     {{
-                        element.paymentMode == 0
-                            ? "Gpay"
-                            : element.paymentMode == 1
-                            ? "PhonePe"
-                            : element.paymentMode == 2
-                            ? "Credit Card / Debit Card"
-                            : element.paymentMode == 3
-                            ? "Cheque"
-                            : element.paymentMode == 4
-                            ? "Cash"
-                            : "-"
+                    element.paymentMode == 0
+                    ? "Gpay"
+                    : element.paymentMode == 1
+                    ? "PhonePe"
+                    : element.paymentMode == 2
+                    ? "Credit Card / Debit Card"
+                    : element.paymentMode == 3
+                    ? "Cheque"
+                    : element.paymentMode == 4
+                    ? "Cash"
+                    : "-"
                     }}
                 </td>
             </ng-container>
@@ -60,20 +56,14 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator
-            #paginatorRef
-            [pageSizeOptions]="[5, 10, 25, 100]"
-            [showFirstLastButtons]="true"
-        ></mat-paginator>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
     </div>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end" class="flex gap-4 items-center">
     <button
-        class="px-6 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
-        mat-dialog-close
-        cdkFocusInitial
-    >
+        class="px-6 text-textColor py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover border border-darkAccent hover:border-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
+        mat-dialog-close cdkFocusInitial>
         Close
     </button>
 </mat-dialog-actions>
