--- a/src/app/modules/admin/roles-and-permissions/components/add-role/add-role.component.html
+++ b/src/app/modules/admin/roles-and-permissions/components/add-role/add-role.component.html
@@ -303,11 +303,11 @@
 
             <div class="flex items-center gap-4 mt-4 self-end">
                 <button type="submit"
-                    class="px-10 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2">
+                    class="px-10 text-accentHover border border-accentHover  py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2">
                     Cancel
                 </button>
                 <button type="submit"
-                    class="py-2 px-10 rounded font-semibold text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] self-end transition-all hover:bg-accentHover bg-darkAccent w-fit">
+                    class="px-10 text-textColor py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover border border-darkAccent hover:border-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2">
                     {{
                     updateFormData != undefined ? "Update Role" : "Add Role"
                     }}
@@ -316,3 +316,4 @@
         </div>
     </form>
 </section>
+<p-toast></p-toast>
