--- a/src/app/modules/admin/tax/components/add-tax/add-tax.component.html
+++ b/src/app/modules/admin/tax/components/add-tax/add-tax.component.html
@@ -48,8 +48,9 @@
             </div>
         </div>
         <button type="submit"
-            class="px-10 border text-textColor hover:border-darkAccent border-accentHover shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2 self-end">
+            class="py-2 px-10 rounded font-semibold text-textColor  self-end transition-all hover:bg-accentHover bg-darkAccent w-fit">
             {{ updateFormData != undefined ? "Update Tax" : "Add Tax" }}
         </button>
     </form>
 </section>
+<p-toast></p-toast>
